--- a/package.json
+++ b/package.json
@@ -39,8 +39,9 @@
     "url": "https://github.com/bitcoinjs/coinselect.git"
   },
   "scripts": {
-    "coverage": "nyc --check-coverage --branches 100 --functions 100 tape test/*.js",
+    "coverage": "nyc --exclude='third-party/**' --check-coverage --branches 100 --functions 100 tape test/*.js",
     "standard": "standard",
+    "standard:file": "standard --fix",
     "test": "npm run standard && npm run unit",
     "unit": "tape test/*.js",
     "test-witness": "tape test/witness.js"
@@ -71,5 +72,10 @@
   },
   "peerDependencies": {
     "tslib": "^2.6.2"
+  },
+  "standard": {
+    "ignore": [
+      "third-party/**"
+    ]
   }
 }
